# rules_pkg-pr154-repro

./: BUILD.bazel  README.md  WORKSPACE
